2008-03-12  Sam Steingold  <sds@gnu.org>

	* src/glm4/lib-link.m4: updated from gnulib, discarding my changes
	* src/m4/ffcall.m4 (CL_FFCALL): updated for the new AC_LIB_LINKFLAGS

2008-03-12  Sam Steingold  <sds@gnu.org>

	* foreign.d (FOREIGN-POINTER-INFO): add interface to dladdr()
	* constsym.d, subr.d (foreign_pointer_info): declare
	* m4/dynload.m4 (CL_DYNLOAD): check for dladdr()
	* foreign1.lisp (FOREIGN-POINTER-INFO): export

2008-03-12  Sam Steingold  <sds@gnu.org>

	* makemake.in (clean4): also remove ${SUBDIRS} (gllib)

2008-03-12  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/configure.in: fix last patch: cannot nest
	AC_TRY_LINK; fail if XauGetAuthByAddr was not found
	also define HAVE_XGETATOMNAMES when XGetAtomNames is present (4y late!)

2008-03-12  Reini Urban  <rurban@x-ray.at>

	* modules/clx/new-clx/configure.in: explicit check for -lXau,
	needed at least for cygwin

2008-03-11  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (TAGS, tags): new targets

2008-03-11  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.45 (2008-04-04)

2008-03-11  Sam Steingold  <sds@gnu.org>

	keep in our cvs some externally maintained files - because
	requiring ./autogen.sh after cvs co is outrageous
	* autogen.sh: remove
	* Makefile.devel (build-aux-update): update ltmain.sh,
	libtool.m4 (from libtool 2.2) and gtk-2.0.m4 (from gtk2 svn) here
	(gnulib-imported): decouple from build-aux-update

2008-03-10  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (c-form-table): SORT & STABLE-SORT -> c-SORT
	(c-SORT): new function (check arg order, map STABLE-SORT to SORT)
	* eval.d (FUNTAB): remove stable_sort, add symbol_macro_expand
	* constobj.d (version): bump

2008-03-10  Sam Steingold  <sds@gnu.org>

	thread safety: remove static variables
	* pathname.d (struct file_status): new struct type
	(file_status_init): new function
	(assure_dir_exists): accept a pointer to struct file_status
	instead of using STACK_0; return the value in struct file_status